decision_tree and remove junit4